Button send done

--- a/index.html
+++ b/index.html
@@ -12,253 +12,12 @@
 
 <body>
 
-    <header class="header">
-        <div class="container --relative --flex">
-            <div class="header__logo">
-                <img src="./img/Linklogo.png" alt="">
-            </div>
-            <div class="header__upmenu">
-                <a href="">info@gatd.ca</a>
-                <a href="">(514)776-9917</a>
-            </div>
-            <div class="header__downmenu">
-                <ul class="nav">
-                    <li class="nav__list"><a class="link" href="#">Air Climatisé</a></li>
-                    <li class="nav__list"><a class="link" href="#">Thermopompe</a></li>
-                    <li class="nav__list"><a class="link" href="#">Chauffage</a></li>
-                    <li class="nav__list"><a class="link" href="#">Financement sur 120 mois</a></li>
-                    <li class="nav__list"><a class="link" href="#">Demande de soumission</a></li>
-                </ul>
-                <div class="nav__list">
-                    <a class="link" href="">Rechercher</a>
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19 18">
-                        <path
-                            d="M18.0323 15.9569L15.1126 13.4173C15.6078 12.7377 15.9908 11.992 16.2615 11.18C16.5321 10.368 16.6674 9.52435 16.6674 8.64903C16.6559 7.53183 16.4371 6.48374 16.0109 5.50476C15.5848 4.51426 15.006 3.65333 14.2747 2.92197C13.5433 2.19061 12.6824 1.61186 11.6919 1.18571C10.7129 0.759567 9.66483 0.546494 8.54763 0.546494C7.71838 0.546494 6.92367 0.661669 6.16352 0.892017C5.39185 1.13388 4.68065 1.47365 4.02991 1.91131C3.37917 2.34898 2.79466 2.87302 2.27638 3.48345C1.76961 4.10539 1.36074 4.79644 1.04977 5.55659C0.727277 6.31674 0.531481 7.09417 0.462376 7.88888C0.381754 8.68358 0.419185 9.46677 0.574671 10.2384C0.730157 11.0101 0.997938 11.753 1.37801 12.4671C1.74657 13.1696 2.21879 13.8146 2.79466 14.402C3.38205 14.9779 4.02703 15.4558 4.72959 15.8359C5.44368 16.2045 6.18655 16.4665 6.95822 16.622C7.72989 16.7775 8.51308 16.8149 9.30779 16.7343C10.114 16.6652 10.8972 16.4751 11.6573 16.1642C11.9683 16.026 12.2707 15.8734 12.5643 15.7064C12.858 15.5393 13.1373 15.3579 13.4022 15.1622L16.4429 17.7881C16.6271 17.9494 16.8402 18.0214 17.0821 18.0041C17.3239 17.9868 17.5255 17.886 17.6867 17.7018L18.1186 17.2007C18.2799 17.0165 18.3519 16.8034 18.3346 16.5615C18.3173 16.3197 18.2165 16.1181 18.0323 15.9569ZM8.54763 14.7302C7.92569 14.7302 7.33254 14.6439 6.76819 14.4711C6.19231 14.2868 5.65963 14.0334 5.17014 13.711C4.68065 13.3885 4.2401 12.9969 3.84851 12.5362C3.46843 12.064 3.16322 11.5457 2.93287 10.9813C2.691 10.417 2.54128 9.83533 2.48369 9.23642C2.43762 8.63751 2.46929 8.05012 2.57871 7.47425C2.68813 6.89837 2.8868 6.34554 3.17474 5.81573C3.45116 5.27441 3.8082 4.79068 4.24586 4.36453C4.68353 3.92687 5.16726 3.56983 5.69706 3.29341C6.22686 3.00547 6.7797 2.80392 7.35558 2.68874C7.93145 2.57357 8.51884 2.54477 9.11775 2.60236C9.71666 2.65995 10.2983 2.80392 10.8626 3.03427C11.4385 3.27613 11.9568 3.5871 12.4175 3.96718C12.8782 4.34726 13.2727 4.78204 13.6009 5.27153C13.9292 5.76102 14.1797 6.29371 14.3524 6.86958C14.5252 7.44545 14.6116 8.0386 14.6116 8.64903C14.6116 9.4898 14.4561 10.2787 14.1451 11.0159C13.8226 11.753 13.3878 12.398 12.8408 12.9508C12.2937 13.5036 11.6516 13.9413 10.9145 14.2638C10.1774 14.5748 9.38841 14.7302 8.54763 14.7302Z" />
-                    </svg>
-                </div>
-            </div>
-    </header>
-
-    <main class="layout">
-
-        <section class="home-support">
-            <div class="container --spacer2x --flex">
-                <div class="home-support__card">
-
-
-                    <h2>De quoi as-tu besoin d'assistance ?</h2>
-                    <p>Nous sommes là pour vous aider à chaque fois que nécessaire !</p>
-
-                    <div class="home-support__links">
-                        <a class="button" href="#">Où acheter</a>
-                        <a class="button --light" href="#">Démarrage</a>
-                        <a class="button --light" href="#">SUBVENTIONS</a>
-                        <a class="button --light" href="#">THERMOPOMPES</a>
-                    </div>
-
-                    <div class="home-support__bottom">
-                        <svg width="26" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M9.68966 22.3926C4.66879 21.3711 0.886841 16.9327 0.886841 11.6075C0.886841 5.53033 5.81207 0.605103 11.8893 0.605103C17.9665 0.605103 22.8917 5.53033 22.8917 11.6075C22.8917 11.7814 22.8874 11.951 22.8787 12.1248"
-                                stroke="#2E2D2C" stroke-width="0.776256" stroke-miterlimit="10" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                            <path
-                                d="M11.6763 16.9675C11.6763 16.2981 11.9458 15.6895 12.3848 15.2504C12.8239 14.8114 13.4281 14.5419 14.1019 14.5419C14.7714 14.5419 15.38 14.8114 15.819 15.2504C16.2581 15.6895 16.5276 16.2937 16.5276 16.9675C16.5276 17.637 16.2581 18.2456 15.819 18.6846"
-                                stroke="white" stroke-width="3.10503" stroke-miterlimit="10" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                            <path d="M15.819 18.6846L11.8893 22.61H17.0493" stroke="white" stroke-width="3.10503"
-                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M22.1527 22.61V14.5419" stroke="white" stroke-width="3.10503"
-                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M18.2273 20.1496L22.1527 14.5419" stroke="white" stroke-width="3.10503"
-                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M23.948 20.1495H18.2273" stroke="white" stroke-width="3.10503"
-                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-                            <path
-                                d="M11.6763 16.9675C11.6763 16.2981 11.9458 15.6895 12.3848 15.2504C12.8239 14.8114 13.4281 14.5419 14.1019 14.5419C14.7714 14.5419 15.38 14.8114 15.819 15.2504C16.2581 15.6895 16.5276 16.2937 16.5276 16.9675C16.5276 17.637 16.2581 18.2456 15.819 18.6846"
-                                stroke="#2E2D2C" stroke-width="0.776256" stroke-miterlimit="10" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                            <path d="M15.819 18.6846L11.8893 22.61H17.0493" stroke="#2E2D2C" stroke-width="0.776256"
-                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M22.1527 22.61V14.5419" stroke="#2E2D2C" stroke-width="0.776256"
-                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M18.2273 20.1496L22.1527 14.5419" stroke="#2E2D2C" stroke-width="0.776256"
-                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M23.948 20.1495H18.2273" stroke="#2E2D2C" stroke-width="0.776256"
-                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M16.3232 7.17347L11.8892 11.6075L5.86853 5.58679" stroke="#2E2D2C"
-                                stroke-width="0.776256" stroke-miterlimit="10" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                            <path
-                                d="M13.2542 11.6076C13.2542 12.3596 12.6456 12.9682 11.8936 12.9682C11.1415 12.9682 10.533 12.3596 10.533 11.6076C10.533 10.8555 11.1415 10.2469 11.8936 10.2469C12.6413 10.2469 13.2542 10.8555 13.2542 11.6076Z"
-                                fill="white" stroke="#2E2D2C" stroke-width="0.776256" stroke-miterlimit="10"
-                                stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M3.34729 11.6075H4.76009" stroke="#2E2D2C" stroke-width="0.776256"
-                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M11.8893 4.47835V3.06555" stroke="#2E2D2C" stroke-width="0.776256"
-                                stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                        <p>URGRNCE?</p><a href="#">Cliquez ici</a>
-                    </div>
-
-                </div>
-            </div>
-            </div>
-        </section>
-
-        <section class="brick">
-            <div class="brick__container container">
-                <div class="brick-first">
-                    <div class="brick-first__elements">
-                        <div class="brick-first__text">
-                            <h2>Faites l'expérience du confort
-                                <br />dans toute la maison
-                                <h2>
-                                    <p>Les fournaises au gaz Napoléon produisent de la chaleur rapidement et le plus
-                                        efficacement
-                                        possible afin de tenir votre maison au chaud tout l'hiver.</p>
-                        </div>
-                        <a class="button --line" href="#">Fournaises au gaz</a>
-                    </div>
-                </div>
-                <div class="brick-second">
-                    <div class="brick-second__elements">
-                        <div class="brick-second__text">
-                            <p>Respirez
-                                aisément</p>
-                            <p>Vous pouvez compter sur les
-                                solutions de conditionnement d’air
-                                intérieur de qualité de Napoléon
-                                pour éliminer le pollen, les acariens,
-                                les bactéries et les virus.</p>
-                        </div>
-
-                        <a class="button --second" href="#">Qualité de l’air</a>
-                    </div>
-                </div>
-
-                <div class="brick-third">
-                    <div class="brick-third__elements">
-                        <div class="brick-third__text">
-                            <p>Abonnez-vous maintenant!</p>
-
-                            <p>Recevez les dernières nouvelles, recettes et promotions directement dans
-                                votre boîte de réception!</p>
-                        </div>
-                        <div class="brick-third__link">
-                            <a href="#">Informez-vous</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-    </main>
-
-    <footer class="footer">
-        <div class="container --spacer2x">
-            <div class="footer__top">
-                <div class="footer__top-first">
-                    <div class="footer__top-nav">
-                        <p>Chauffage/Climatisation</p>
-                        <ul class="footer__top-links">
-                            <li><a class="footer__top-link" href="#">Produits</a></li>
-                            <li><a class="footer__top-link" href="#">Offres</a></li>
-                            <li><a class="footer__top-link" href="#">Démarrage</a></li>
-                            <li><a class="footer__top-link" href="#">Soutien</a></li>
-                            <li><a class="footer__top-link --line" href="#">Trouver un détaillant</a></li>
-                            <li><a class="footer__top-link" href="#">Entreprise</a></li>
-                            <li><a class="footer__top-link" href="#">Foyers</a></li>
-                            <li><a class="footer__top-link" href="#">Barbecues</a></li>
-                            <li><a class="footer__top-link" href="#">Chauffage /
-                                    Climatisation</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="footer__second">
-                    <div class="footer__group">
-                        <div class="footer__group-item">
-                            <p class="group__title">Fournaises</p>
-                            <a href="#">Fournaises au gaz</a>
-                        </div>
-                        <div class="footer__group-item">
-                            <p class="group__title">Climatiseurs</p>
-                            <a href="#">Climatiseurs centraux</a>
-                        </div>
-                        <div class="footer__group-item">
-                            <p class="group__title">Thermopompes</p>
-                            <a href="#">Thermopompes centrales</a>
-                        </div>
-                        <div class="footer__group-item">
-                            <p class="group__title">Systèmes muraux</p>
-                            <a href="#">Systèmes muraux</a>
-                            <a href="#">Climatiseurs muraux</a>
-                            <a href="#">Systèmes de multizone</a>
-                        </div>
-                    </div>
-                    <div class="footer__group">
-                        <div class="footer__group-item">
-                            <p class="group__title">Qualité de l'air
-                                intérieur</p>
-                            <a href="#">Technologie UV-C</a>
-                            <a href="#">Filtres</a>
-                        </div>
-                        <div class="footer__group-item --2">
-                            <p class="group__title">Appareils de
-                                traitement d’air</p>
-                        </div>
-                        <div class="footer__group-item">
-                            <p class="group__title">Thermostats</p>
-                        </div>
-                        <div class="footer__group-item">
-                            <p class="group__title">Condo Pack - Travers
-                                les unités murales</p>
-                        </div>
-                    </div>
-
-                    <div class="footer__group">
-                        <div class="footer__group-item">
-                            <p class="group__title">Hybrid Heating
-                                Solution</p>
-                            <a href="#">EQHub Smart Thermostat</a>
-                            <a href="#">Central Heat Pumps</a>
-                            <a href="#">Gas Furnaces</a>
-                        </div>
-                        <div class="footer__group-item --3">
-                            <p class="group__title">Napoleon Home</p>
-                            <a href="#">Climatiseurs centraux</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="footer__top-group-last">
-                    <div class="footer__group-item --first">
-                        <p class="group__title">Restez connecté</p>
-                    </div>
-                    <div class="footer__group-item --last">
-                        <p class="group__title">Entreprise</p>
-                        <p class="group__title">Foyers</p>
-                        <p class="group__title">Barbecues</p>
-                        <p class="group__title">Chauffage / Climatisation</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="footer__bottom">
-                <div class="footer__bottom-links">
-                    <ul class="footer__bottom-nav">
-                        <li class="footer__bottom-item"><a href="#">Carrières</a></li>
-                        <li class="footer__bottom-item"><a href="#">Conditions d’utilisation</a></li>
-                        <li class="footer__bottom-item"><a href="#">Déclaration de confidentialité</a></li>
-                        <li class="footer__bottom-item"><a href="#">Choix de cookies</a></li>
-                        <li class="footer__bottom-item"><a href="#">Accessibilité</a></li>
-                    </ul>
-                </div>
-                <div class="footer__bottom-capt">
-                    <p>© Napoleon 2023. Tous droits réservés.</p>
-                </div>
-            </div>
-    </footer>
+    <div class="buttons">
+        <button class="button">
+            <span><i class='bx bxs-send'></i></span>
+            <span class="first">Send</span>
+        </button>
+    </div>
 
 </body>
 
