--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="home-support__card">
 
 
-                    <h2>De quoi as-tu besoin d'assistance ?</h2>
+                    <h2 class="caption">De quoi as-tu besoin d'assistance ?</h2>
                     <p>Nous sommes là pour vous aider à chaque fois que nécessaire !</p>
 
                     <div class="home-support__links">
@@ -106,48 +106,45 @@
             </div>
         </section>
 
-        <section class="brick">
-            <div class="brick__container container">
+        <section>
+            <div class="container --flex --flex-row">
                 <div class="brick-first">
-                    <div class="brick-first__elements">
-                        <div class="brick-first__text">
-                            <h2>Faites l'expérience du confort
-                                <br />dans toute la maison
-                                <h2>
-                                    <p>Les fournaises au gaz Napoléon produisent de la chaleur rapidement et le plus
-                                        efficacement
-                                        possible afin de tenir votre maison au chaud tout l'hiver.</p>
-                        </div>
-                        <a class="button --line" href="#">Fournaises au gaz</a>
-                    </div>
+
+
+                    <h2 class="caption">Faites l'expérience du confort dans toute la maison
+                    </h2>
+                    <p>Les fournaises au gaz Napoléon produisent de la chaleur rapidement et le plus
+                        efficacement possible afin de tenir votre maison au chaud tout l'hiver.</p>
+
+                    <a class="button --line" href="#">Fournaises au gaz</a>
+
                 </div>
                 <div class="brick-second">
-                    <div class="brick-second__elements">
-                        <div class="brick-second__text">
-                            <p>Respirez
-                                aisément</p>
-                            <p>Vous pouvez compter sur les
-                                solutions de conditionnement d’air
-                                intérieur de qualité de Napoléon
-                                pour éliminer le pollen, les acariens,
-                                les bactéries et les virus.</p>
-                        </div>
 
-                        <a class="button --second" href="#">Qualité de l’air</a>
-                    </div>
+                    <h2 class="caption">
+                        Respirez aisément
+                    </h2>
+
+                    <p>
+                        Vous pouvez compter sur les
+                        solutions de conditionnement d’air
+                        intérieur de qualité de Napoléon
+                        pour éliminer le pollen, les acariens,
+                        les bactéries et les virus.
+                    </p>
+
+                    <a class="button --second" href="#">Qualité de l’air</a>
                 </div>
 
                 <div class="brick-third">
                     <div class="brick-third__elements">
-                        <div class="brick-third__text">
-                            <p>Abonnez-vous maintenant!</p>
+                        <h2 class="caption">Abonnez-vous maintenant!</h2>
 
-                            <p>Recevez les dernières nouvelles, recettes et promotions directement dans
-                                votre boîte de réception!</p>
-                        </div>
-                        <div class="brick-third__link">
-                            <a href="#">Informez-vous</a>
-                        </div>
+                        <p>Recevez les dernières nouvelles, recettes et promotions directement dans
+                            votre boîte de réception!</p>
+
+                        <a class="button --dark" href="#">Informez-vous</a>
+
                     </div>
                 </div>
             </div>
