--- a/index.html
+++ b/index.html
@@ -155,101 +155,116 @@
     <footer class="footer">
         <div class="container --spacer2x">
             <div class="footer__top">
-                <div class="footer__top-first">
-                    <div class="footer__top-nav">
-                        <p>Chauffage/Climatisation</p>
-                        <ul class="footer__top-links">
-                            <li><a class="footer__top-link" href="#">Produits</a></li>
-                            <li><a class="footer__top-link" href="#">Offres</a></li>
-                            <li><a class="footer__top-link" href="#">Démarrage</a></li>
-                            <li><a class="footer__top-link" href="#">Soutien</a></li>
-                            <li><a class="footer__top-link --line" href="#">Trouver un détaillant</a></li>
-                            <li><a class="footer__top-link" href="#">Entreprise</a></li>
-                            <li><a class="footer__top-link" href="#">Foyers</a></li>
-                            <li><a class="footer__top-link" href="#">Barbecues</a></li>
-                            <li><a class="footer__top-link" href="#">Chauffage /
-                                    Climatisation</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="footer__second">
-                    <div class="footer__group">
-                        <div class="footer__group-item">
-                            <p class="group__title">Fournaises</p>
-                            <a href="#">Fournaises au gaz</a>
-                        </div>
-                        <div class="footer__group-item">
-                            <p class="group__title">Climatiseurs</p>
-                            <a href="#">Climatiseurs centraux</a>
-                        </div>
-                        <div class="footer__group-item">
-                            <p class="group__title">Thermopompes</p>
-                            <a href="#">Thermopompes centrales</a>
-                        </div>
-                        <div class="footer__group-item">
-                            <p class="group__title">Systèmes muraux</p>
-                            <a href="#">Systèmes muraux</a>
-                            <a href="#">Climatiseurs muraux</a>
-                            <a href="#">Systèmes de multizone</a>
-                        </div>
-                    </div>
-                    <div class="footer__group">
-                        <div class="footer__group-item">
-                            <p class="group__title">Qualité de l'air
-                                intérieur</p>
-                            <a href="#">Technologie UV-C</a>
-                            <a href="#">Filtres</a>
-                        </div>
-                        <div class="footer__group-item --2">
-                            <p class="group__title">Appareils de
-                                traitement d’air</p>
-                        </div>
-                        <div class="footer__group-item">
-                            <p class="group__title">Thermostats</p>
-                        </div>
-                        <div class="footer__group-item">
-                            <p class="group__title">Condo Pack - Travers
-                                les unités murales</p>
-                        </div>
-                    </div>
 
+                <div class="footer__col --first">
                     <div class="footer__group">
-                        <div class="footer__group-item">
-                            <p class="group__title">Hybrid Heating
-                                Solution</p>
-                            <a href="#">EQHub Smart Thermostat</a>
-                            <a href="#">Central Heat Pumps</a>
-                            <a href="#">Gas Furnaces</a>
-                        </div>
-                        <div class="footer__group-item --3">
-                            <p class="group__title">Napoleon Home</p>
-                            <a href="#">Climatiseurs centraux</a>
-                        </div>
+                        <h3 class="footer__group-title">Chauffage/Climatisation</h3>
+                        <!-- links -->
+                        <a class="footer__top-link" href="#">Produits</a>
+                        <a class="footer__top-link" href="#">Offres</a>
+                        <a class="footer__top-link" href="#">Démarrage</a>
+                        <a class="footer__top-link" href="#">Soutien</a>
+                        <a class="footer__top-link --line" href="#">Trouver un détaillant</a>
+                        <a class="footer__top-link" href="#">Entreprise</a>
+                        <a class="footer__top-link" href="#">Foyers</a>
+                        <a class="footer__top-link" href="#">Barbecues</a>
+                        <a class="footer__top-link" href="#">Chauffage / Climatisation</a>
+
                     </div>
                 </div>
 
-                <div class="footer__top-group-last">
-                    <div class="footer__group-item --first">
-                        <p class="group__title">Restez connecté</p>
+                <div class="footer__col --center">
+                    <div class="footer__group">
+                        <h3 class="footer__group-title">Fournaises</h3>
+                        <!-- links -->
+                        <a class="footer__top-link" href="#">Fournaises au gaz</a>
                     </div>
-                    <div class="footer__group-item --last">
-                        <p class="group__title">Entreprise</p>
-                        <p class="group__title">Foyers</p>
-                        <p class="group__title">Barbecues</p>
-                        <p class="group__title">Chauffage / Climatisation</p>
+
+                    <div class="footer__group">
+                        <h3 class="footer__group-title">Climatiseurs</h3>
+                        <!-- links -->
+                        <a class="footer__top-link" href="#">Climatiseurs centraux</a>
+                    </div>
+
+                    <div class="footer__group">
+                        <h3 class="footer__group-title">Thermopompes</h3>
+                        <!-- links -->
+                        <a class="footer__top-link" href="#">Thermopompes centrales</a>
+                    </div>
+
+                    <div class="footer__group">
+                        <h3 class="footer__group-title">Systèmes muraux</h3>
+                        <!-- links -->
+                        <a class="footer__top-link" href="#">Systèmes muraux</a>
+                        <a class="footer__top-link" href="#">Climatiseurs muraux</a>
+                        <a class="footer__top-link" href="#">Systèmes de multizone</a>
+                    </div>
+                </div>
+
+                <div class="footer__col --center">
+                    <div class="footer__group">
+                        <h3 class="footer__group-title">Qualité de l'air
+                            intérieur</h3>
+                        <!-- links -->
+                        <a class="footer__top-link" href="#">Technologie UV-C</a>
+                        <a class="footer__top-link" href="#">Filtres</a>
+                    </div>
+
+                    <div class="footer__group">
+                        <h3 class="footer__group-title">Appareils de
+                            traitement d’air</h3>
+                    </div>
+
+                    <div class="footer__group">
+                        <h3 class="footer__group-title">Thermostats</h3>
+                    </div>
+
+
+                    <div class="footer__group">
+                        <h3 class="footer__group-title">Condo Pack - Travers
+                            les unités murales</h3>
+                    </div>
+                </div>
+
+                <div class="footer__col --center">
+                    <div class="footer__group">
+                        <h3 class="footer__group-title">Hybrid Heating
+                            Solution</h3>
+                        <!-- links -->
+                        <a class="footer__top-link" href="#">EQHub Smart Thermostat</a>
+                        <a class="footer__top-link" href="#">Central Heat Pumps</a>
+                        <a class="footer__top-link" href="#">Gas Furnaces</a>
+                    </div>
+
+                    <div class="footer__group">
+                        <h3 class="footer__group-title">Napoleon Home</h3>
+                        <!-- links -->
+                        <a class="footer__top-link" href="#">Stylus Cara Elite</a>
+                        <a class="footer__top-link" href="#">Thermostat intelligent</a>
+                        <a class="footer__top-link" href="#">EQHub</a>
+                    </div>
+
+                </div>
+
+                <div class="footer__col --last">
+                    <div class="footer__group">
+                        <a class="footer__top-link" href="#">Restez connecté</a>
+                        <!-- --2-- -->
+                        <a class="footer__top-link" href="#">Entreprise</a>
+                        <a class="footer__top-link" href="#">Foyers</a>
+                        <a class="footer__top-link" href="#">Barbecues</a>
+                        <a class="footer__top-link" href="#">Chauffage / Climatisation</a>
                     </div>
                 </div>
             </div>
 
             <div class="footer__bottom">
                 <div class="footer__bottom-links">
-                    <ul class="footer__bottom-nav">
-                        <li class="footer__bottom-item"><a href="#">Carrières</a></li>
-                        <li class="footer__bottom-item"><a href="#">Conditions d’utilisation</a></li>
-                        <li class="footer__bottom-item"><a href="#">Déclaration de confidentialité</a></li>
-                        <li class="footer__bottom-item"><a href="#">Choix de cookies</a></li>
-                        <li class="footer__bottom-item"><a href="#">Accessibilité</a></li>
-                    </ul>
+                    <a href="#">Carrières</a>
+                    <a href="#">Conditions d’utilisation</a>
+                    <a href="#">Déclaration de confidentialité</a>
+                    <a href="#">Choix de cookies</a>
+                    <a href="#">Accessibilité</a>
                 </div>
                 <div class="footer__bottom-capt">
                     <p>© Napoleon 2023. Tous droits réservés.</p>
